// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`VotesFilter > should render 1`] = `
<DocumentFragment>
  <div>
    <div
      aria-expanded="false"
      aria-haspopup="dialog"
      data-testid="dropdown__toggle-VotesFilter"
    >
      <div
        class="group"
      >
        <button
          class="relative flex cursor-pointer items-center justify-center font-semibold text-theme-secondary-700 transition-colors duration-200 focus:outline-none disabled:cursor-not-allowed disabled:text-theme-secondary-400 dark:text-theme-secondary-500 disabled:dark:text-theme-secondary-700 hover:bg-theme-primary-100 hover:dark:text-white hover:text-theme-primary-400 rounded px-2 py-1.5 ring-focus"
        >
          <div
            class="flex h-5 w-5 items-center justify-center"
          >
            <div>
              <div
                style="height: 20px; width: 20px;"
              >
                <svg
                  fill="none"
                  height="16"
                  style="height: 100%; width: 100%;"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    clip-path="url(#clip0_13768_41214)"
                  >
                    <path
                      d="M9.75946 11.5209V8.00094L14.6395 3.12094C14.9595 2.80094 15.1195 2.24094 14.8795 1.76094C14.7195 1.28094 14.2395 0.960938 13.7595 0.960938H2.23946C1.75946 0.960938 1.27946 1.28094 1.11946 1.76094C0.879462 2.24094 1.03946 2.72094 1.35946 3.12094L6.23946 8.00094V15.0409L9.75946 11.5209Z"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="1.6"
                    />
                  </g>
                  <defs>
                    <clippath
                      id="clip0_13768_41214"
                    >
                      <rect
                        fill="white"
                        height="16"
                        width="16"
                      />
                    </clippath>
                  </defs>
                </svg>
              </div>
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`VotesFilter > should render default 1`] = `
<DocumentFragment>
  <div>
    <div
      aria-controls=":r2:"
      aria-expanded="true"
      aria-haspopup="dialog"
      data-testid="dropdown__toggle-VotesFilter"
    >
      <div
        class="group"
      >
        <button
          class="relative flex cursor-pointer items-center justify-center font-semibold text-theme-secondary-700 transition-colors duration-200 focus:outline-none disabled:cursor-not-allowed disabled:text-theme-secondary-400 dark:text-theme-secondary-500 disabled:dark:text-theme-secondary-700 hover:bg-theme-primary-100 hover:dark:text-white hover:text-theme-primary-400 rounded px-2 py-1.5 ring-focus"
        >
          <div
            class="flex h-5 w-5 items-center justify-center"
          >
            <div>
              <div
                style="height: 20px; width: 20px;"
              >
                <svg
                  fill="none"
                  height="16"
                  style="height: 100%; width: 100%;"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    clip-path="url(#clip0_13768_41214)"
                  >
                    <path
                      d="M9.75946 11.5209V8.00094L14.6395 3.12094C14.9595 2.80094 15.1195 2.24094 14.8795 1.76094C14.7195 1.28094 14.2395 0.960938 13.7595 0.960938H2.23946C1.75946 0.960938 1.27946 1.28094 1.11946 1.76094C0.879462 2.24094 1.03946 2.72094 1.35946 3.12094L6.23946 8.00094V15.0409L9.75946 11.5209Z"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="1.6"
                    />
                  </g>
                  <defs>
                    <clippath
                      id="clip0_13768_41214"
                    >
                      <rect
                        fill="white"
                        height="16"
                        width="16"
                      />
                    </clippath>
                  </defs>
                </svg>
              </div>
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`VotesFilter > should render with current option selected 1`] = `
<DocumentFragment>
  <div>
    <div
      aria-controls=":r5:"
      aria-expanded="true"
      aria-haspopup="dialog"
      data-testid="dropdown__toggle-VotesFilter"
    >
      <div
        class="group"
      >
        <button
          class="relative flex cursor-pointer items-center justify-center font-semibold text-theme-secondary-700 transition-colors duration-200 focus:outline-none disabled:cursor-not-allowed disabled:text-theme-secondary-400 dark:text-theme-secondary-500 disabled:dark:text-theme-secondary-700 hover:bg-theme-primary-100 hover:dark:text-white hover:text-theme-primary-400 rounded px-2 py-1.5 ring-focus"
        >
          <div
            class="absolute right-1 top-0.5 flex h-3 w-3 items-center justify-center rounded-full bg-theme-background transition-all duration-100 ease-linear -mr-2.5"
          >
            <div
              class="h-2 w-2 rounded-full bg-theme-primary-500"
            />
          </div>
          <div
            class="flex h-5 w-5 items-center justify-center"
          >
            <div>
              <div
                style="height: 20px; width: 20px;"
              >
                <svg
                  fill="none"
                  height="16"
                  style="height: 100%; width: 100%;"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    clip-path="url(#clip0_13768_41214)"
                  >
                    <path
                      d="M9.75946 11.5209V8.00094L14.6395 3.12094C14.9595 2.80094 15.1195 2.24094 14.8795 1.76094C14.7195 1.28094 14.2395 0.960938 13.7595 0.960938H2.23946C1.75946 0.960938 1.27946 1.28094 1.11946 1.76094C0.879462 2.24094 1.03946 2.72094 1.35946 3.12094L6.23946 8.00094V15.0409L9.75946 11.5209Z"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="1.6"
                    />
                  </g>
                  <defs>
                    <clippath
                      id="clip0_13768_41214"
                    >
                      <rect
                        fill="white"
                        height="16"
                        width="16"
                      />
                    </clippath>
                  </defs>
                </svg>
              </div>
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`VotesFilter > should render with disabled current option 1`] = `
<DocumentFragment>
  <div>
    <div
      aria-controls=":r8:"
      aria-expanded="true"
      aria-haspopup="dialog"
      data-testid="dropdown__toggle-VotesFilter"
    >
      <div
        class="group"
      >
        <button
          class="relative flex cursor-pointer items-center justify-center font-semibold text-theme-secondary-700 transition-colors duration-200 focus:outline-none disabled:cursor-not-allowed disabled:text-theme-secondary-400 dark:text-theme-secondary-500 disabled:dark:text-theme-secondary-700 hover:bg-theme-primary-100 hover:dark:text-white hover:text-theme-primary-400 rounded px-2 py-1.5 ring-focus"
        >
          <div
            class="flex h-5 w-5 items-center justify-center"
          >
            <div>
              <div
                style="height: 20px; width: 20px;"
              >
                <svg
                  fill="none"
                  height="16"
                  style="height: 100%; width: 100%;"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    clip-path="url(#clip0_13768_41214)"
                  >
                    <path
                      d="M9.75946 11.5209V8.00094L14.6395 3.12094C14.9595 2.80094 15.1195 2.24094 14.8795 1.76094C14.7195 1.28094 14.2395 0.960938 13.7595 0.960938H2.23946C1.75946 0.960938 1.27946 1.28094 1.11946 1.76094C0.879462 2.24094 1.03946 2.72094 1.35946 3.12094L6.23946 8.00094V15.0409L9.75946 11.5209Z"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="1.6"
                    />
                  </g>
                  <defs>
                    <clippath
                      id="clip0_13768_41214"
                    >
                      <rect
                        fill="white"
                        height="16"
                        width="16"
                      />
                    </clippath>
                  </defs>
                </svg>
              </div>
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
